pertain to code internals. However, these dictate that PRRTE v3.0.0
require use of PMIx v4.2.2 or above to compile. Note that this doesn't
impact the PMIx level associated with any applications executed by
PRRTE - the only requirement is that applications link against a
PMIx version that meets the PMIx cross-version requirements (i.e., a
minimum of PMIx v2.5).

Detailed changes:

PR #1570: Multiple commits
  - rmaps/base: Fix segv on failed-map
  - ompi/schizo: Fix deprecated message for rankfile
  - Rankfile slots fix and LSF support fix for LSB_AFFINITY_HOSTFILE
PR #1562: Remove check for resilience that caused a segfault
PR #1557: Update NEWS
PR #1556: Multiple commits
  - Support query of pset membership
  - Cleanup grpcomm cruft
  - remove some unused vars
  - squash warnings
  - unused var
  - more unused vars
  - remove unused vars and fix rc/ret typo
  - misc unused var cleanups
  - Reduce debugger confusion
  - Pickup missing changes
PR #1548: Multiple commits
  - alps fixes for mca move
  - schizo/ompi: Fix --report-pid/sid.
  - Change --stop-in-* to take optional arguments.
  - Update Open MPI mpirun help text
  - Fix memory leaks in RML and at job termination.
  - plm/tm: Fix build breakage
PR #1539: Multiple commits
  - Fix a typo and expand debugger example range to cover MPI
  - ras/lsf: Fix build breakage
  - Catch some more component updates
  - Allow prterun to act as prun
PR #1534: Multiple commits
  - Fix print statement
  - Push launch-agent CLI into the env
  - Fix mapping by pe-list when oversubscribed
PR #1530: Actually support the output-proctable option
PR #1528: Add missing commits and new additions
  - Complete help text on notifications
  - BuildRequires: gcc
  - Plug a memory leak
  - schizo/ompi: Fix --use-hwthead-cpus option
  - Fix --preload-binary
PR #1522: Roll version to rc2
PR #1518: schizo_ompi: use the OMPI_MCA_PREFIXES env var
PR #1517: Multiple commits
  - Remove the --with-ft configure option